--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
             "name": "Some File",
             "type": "python",
             "request": "launch",
-            "module": "test.pytorch.evolution.test_np",
+            "module": "test.test_Linear_Independence",
             "justMyCode": true,
             "console": "integratedTerminal"
 
