--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,9 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        {"name":"Python: Module","type":"python","request":"launch","module":"test.test_Analatic_Geometry",
+            "cwd": "${workspaceRoot}",
+         "env": { "PYTHONPATH": "${workspaceRoot}"}},
         {
             "name": "Python: Current File",
             "type": "python",
@@ -15,9 +18,10 @@
             "name": "Some File",
             "type": "python",
             "request": "launch",
-            "module": "test.test_Linear_Independence",
+            "module": "test.test_Analatic_Geometry",
             "justMyCode": true,
             "console": "integratedTerminal"
+
 
         },
         {
